# copy-dir

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg  xtree.py
